--- a/images/config.yaml
+++ b/images/config.yaml
@@ -12,7 +12,7 @@ mixed-port: 7890
 # RESTful API for clash
 external-controller: 127.0.0.1:9090
 allow-lan: false
-mode: rule
+mode: global
 log-level: warning
 
 proxies:
