--- a/images/config.yaml
+++ b/images/config.yaml
@@ -144,18 +144,18 @@ rules:
 - DOMAIN-SUFFIX,bing.com,DIRECT
 # Apple
 - DOMAIN-SUFFIX,emuci.top,DIRECT
-- DOMAIN-SUFFIX,apps.apple.com,DIRECT
+- DOMAIN-SUFFIX,apps.apple.com,Proxy
 - DOMAIN-SUFFIX,music.apple.com,DIRECT
 - DOMAIN-SUFFIX,icloud.com,DIRECT
 - DOMAIN-SUFFIX,icloud-content.com,DIRECT
 - DOMAIN-SUFFIX,me.com,DIRECT
-- DOMAIN-SUFFIX,mzstatic.com,Proxy
+- DOMAIN-SUFFIX,mzstatic.com,DIRECT
 - DOMAIN-SUFFIX,akadns.net,DIRECT
 - DOMAIN-SUFFIX,aaplimg.com,DIRECT
 - DOMAIN-SUFFIX,cdn-apple.com,DIRECT
 - DOMAIN-SUFFIX,apple.com,DIRECT
 - DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
-- DOMAIN,hls.itunes.apple.com,Proxy
+- DOMAIN,hls.itunes.apple.com,DIRECT
 
 #coursera.org
 - DOMAIN,coursera.org,Proxy
