--- a/images/config.yaml
+++ b/images/config.yaml
@@ -152,7 +152,7 @@ rules:
 - DOMAIN-SUFFIX,mzstatic.com,DIRECT
 - DOMAIN-SUFFIX,akadns.net,DIRECT
 - DOMAIN-SUFFIX,aaplimg.com,DIRECT
-- DOMAIN-SUFFIX,cdn-apple.com,DIRECT
+- DOMAIN-SUFFIX,cdn-apple.com,Proxy
 - DOMAIN-SUFFIX,apple.com,Proxy
 - DOMAIN-SUFFIX,apple-cloudkit.com,Proxy
 - DOMAIN,hls.itunes.apple.com,Proxy
