--- a/images/config.yaml
+++ b/images/config.yaml
@@ -149,7 +149,7 @@ rules:
 - DOMAIN-SUFFIX,icloud.com,Proxy
 - DOMAIN-SUFFIX,icloud-content.com,Proxy
 - DOMAIN-SUFFIX,me.com,DIRECT
-- DOMAIN-SUFFIX,mzstatic.com,DIRECT
+- DOMAIN-SUFFIX,mzstatic.com,Proxy
 - DOMAIN-SUFFIX,akadns.net,DIRECT
 - DOMAIN-SUFFIX,aaplimg.com,DIRECT
 - DOMAIN-SUFFIX,cdn-apple.com,Proxy
