--- a/images/config.yaml
+++ b/images/config.yaml
@@ -11,7 +11,7 @@
 mixed-port: 7890
 # RESTful API for clash
 external-controller: 127.0.0.1:9090
-allow-lan: false
+allow-lan: true
 mode: rule
 log-level: warning
 
