--- a/images/config.yaml
+++ b/images/config.yaml
@@ -6,14 +6,14 @@
 
 ## 如果您不知道如何操作，请参阅 官方Github文档 https://github.com/Dreamacro/clash/blob/dev/README.md
 #---------------------------------------------------#
-# ipv6: true
+ipv6: true
 # (HTTP and SOCKS5 in one port)
 mixed-port: 7890
 # RESTful API for clash
 external-controller: 127.0.0.1:9090
 allow-lan: true
-mode: rule
-log-level: warning
+mode: global
+log-level: debug
 
 proxies:
 
